Modified ChangeLog. Moved the icon for the color picker to the line
Modified ChangeLog.
Moved the icon for the color picker to the line explaining to use the tool.

--- a/tutorials/Changing_Background_Color_1/index.html
+++ b/tutorials/Changing_Background_Color_1/index.html
@@ -47,17 +47,16 @@
   <img src="menu.png" alt=""/>
 </p>
 <p>
-  The first step is to activate the color to alpha plug-in. Its menu location is <span class="filter">&lt;image&gt;Filters-&gt;Colors-&gt;Color To Alpha</span>, where &lt;image&gt; 
-  means to right click on the image. If its grayed-out, it means that you have an indexed image. If its not there, upgrade your gimp to 1.2.x.
+  The first step is to activate the color to alpha plug-in. Its menu location is <span class="filter">&lt;image&gt;Filters-&gt;Colors-&gt;Color To Alpha</span>, 
+  where &lt;image&gt; means to right click on the image. If its grayed-out, it means that you have an indexed image. If its not there, upgrade your gimp to 1.2.x.
 </p>
 
 <div class="subtitle">Step 2</div>
 <p class="images">
-  <img src="picker_button.png" alt=""/>
   <img src="select_bg.png" alt=""/>
 </p>
 <p>
-  Next use the Color Picker Tool to select the background color. 
+  Next use the <img src="picker_button.png" alt=""/> Color Picker Tool to select the background color. 
 </p>
 
 <div class="subtitle">Step 3</div>
