Modified ChangeLog. Moved the icon to the line explaining it. Typos and
Modified ChangeLog.
Moved the icon to the line explaining it.
Typos and also moved the tool icons around a bit.
Moved the icons to be in the line explaining the tools.
Fixed some typos and moved the icon to the line.

--- a/tutorials/Bezier_Selections/index.html
+++ b/tutorials/Bezier_Selections/index.html
@@ -14,14 +14,14 @@
 
 <div class="subtitle">What is it?</div>
 <p class="images">
-  <img src="bezier_button.gif" alt=""/>
   <img src="bezier_box.gif" alt=""/>
 </p>
 <p>
-   Bezier selection is a tool to make complex selections by specifying certain points that are connected together with a curve. So to make a box you would 
-   specify four points, one for each corner of the box. Example is on the right side. The great thing is the corners don't have to be 90 degrees. After selecting
-   the fourth point, click on the first point to close the curve (beziers have to be closed - at least at the moment in the current Gimp). Finally click inside 
-   our 'box' to turn it into a selection. Of course you can have as many points as you need. 
+   <img src="bezier_button.gif" alt=""/>Bezier selection is a tool to make complex selections by specifying certain points that are connected together with a curve. 
+   So to make a box you would specify four points, one for each corner of the box. Example is on the right side. 
+   The great thing is the corners don't have to be 90 degrees. After selecting the fourth point, click on the first point to close the curve 
+   (beziers have to be closed - at least at the moment in the current Gimp). Finally click inside our 'box' to turn it into a selection. 
+   Of course you can have as many points as you need. 
 </p>
 
 <div class="subtitle">Modifying the curves</div>
