--- a/tutorials/Drawing_Shapes/index.html
+++ b/tutorials/Drawing_Shapes/index.html
@@ -44,11 +44,10 @@
   Imagine the blue cube on the right side into your canvas, we'll be doing side #1 now.
 </p>
 <p class="images">
-  <img src="bezier_tool.gif" alt=""/>
   <img src="left_side.gif" alt=""/>
 </p>
 <p>
-  Choose the Bezier-selection tool and make something like the side #1 on the blue cube, think about the perspective. 
+  <img src="bezier_tool.gif" alt=""/> Choose the Bezier-selection tool and make something like the side #1 on the blue cube, think about the perspective. 
   (If this causes you trouble, don't worry. You will learn by experience).
   <br /><br />
   You can adjust the points' places if you can't get them right at the first try, see the  Bezier tutorial  for more information on that. 
@@ -57,17 +56,20 @@
   Once you are satisfied with your 'box' click inside it to make the selection.
 </p>
 <p class="images">
-  <img src="colors.gif" alt=""/>
-  <img src="gradient_tool.gif" alt=""/>
   <img src="gradient1.gif" alt=""/>
 </p>
 <p>
   Next we must choose some nice colors for our gradient, choose white for the foreground color and some dark-blue for the background 
   (we are making a blue box, remember?) Something like that on the image nearby.
-  <br /><br />
-  Select the gradient-fill tool and, starting from the top-left of the selection, 'drag' the gradient quite far down-right (see the arrow in the image. 
-  This way you get a quite light-colored face for the cube, and it is just what we want here. We also want the lighter end of the gradient to be near 
-  our imaginative light source. (The light was coming from the left)
+</p>
+<p class="images">
+  <img src="colors.gif" alt=""/>
+</p>
+<p>
+  <img src="gradient_tool.gif" alt=""/> Select the gradient-fill tool and, starting from the top-left of the selection, 
+  'drag' the gradient quite far down-right (see the arrow in the image. This way you get a quite light-colored face for the cube, 
+  and it is just what we want here. We also want the lighter end of the gradient to be near our imaginative light source. 
+  (The light was coming from the left)
 </p>
 
 <div class="subtitle">2. Right side</div>
@@ -103,9 +105,9 @@
   <img src="finished_image.gif" alt=""/>
 </p>
 <p>
-  Now you have a cool image of a Light-Source-Shaded Cube. You can choose <span class="filter">&lt;Image&gt;Layers -&gt; Flatten Image</span> to merge the layers togerher 
+  Now you have a cool image of a Light-Source-Shaded Cube. You can choose <span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span> to merge the layers togerher 
   so you can save as jpeg or any other format than xcf. Or, better still, from the layers dialog, make the background invisible 
-  and choose <span class="filter">&lt;Image&gt;Layers -&gt; Merge Visible Layers</span> so you will have the background on a 
+  and choose <span class="filter">&lt;Image&gt;Layers-&gt;Merge Visible Layers</span> so you will have the background on a 
   separate layer and you can work further on it if you like.
   <br /><br />
   The next thing is to start using the geometrical shapes as building blocks to make things. And you can twist the beziers to make a bit more fancy stuff...
