--- a/tutorials/Lite_Quickies/index.html
+++ b/tutorials/Lite_Quickies/index.html
@@ -95,14 +95,13 @@
 
 <div class="subtitle">Crop An Image</div>
 <p class="images">
-  <img src="crop-button.png" alt=""/>
   <a href="crop-menu.png"><img src="crop-menu-t.png" alt=""/></a>
   <a href="crop-dialog.png"><img src="crop-dialog-t.png" alt=""/></a>
 </p>
 <p>
   Many reasons to need to crop an image. Making rectangles square, or making squares into rectangles. Cutting alot of useless background 
-  to bring out the subject better. etc. To get to the crop tool, you can either push the button on the toolbox or right click on the image 
-  and follow the menu <span class="filter">&lt;Image&gt;Tools-&gt;Transform Tools-&gt;Crop &amp; Resize</span>. 
+  to bring out the subject better. etc. To get to the crop tool, you can either push the button on the toolbox <img src="crop-button.png" alt=""/> 
+  or right click on the image and follow the menu <span class="filter">&lt;Image&gt;Tools-&gt;Transform Tools-&gt;Crop &amp; Resize</span>. 
   This will change the cursor and allow you to click and drag a rectangular shape. Once again, 
   I have chosen one of the huge and beautiful <a href="http://antwrp.gsfc.nasa.gov/apod/ap021108.html">APOD</a> images, 
   <a href="ngc6369_heritage_big.jpg">ngc6369 heritage</a>.
@@ -205,14 +204,13 @@
 
 <div class="subtitle">Flip An Image</div>
 <p class="images">
-  <img src="flip-button.png" alt=""/>
   <a href="flip-menu.png"><img src="flip-menu-t.png" alt=""/></a>
   <img src="flip-dialog.png" alt=""/>
 </p>
 <p>
   When you need the person in the photo looking in the other direction, or you need to top of the image to be the bottom. 
   Mirroring the image (sort of). Right click on the image and follow the menus <span class="filter">&lt;Image&gt;Tools-&gt;Transform Tools-&gt;Flip</span>, 
-  or use the button on the toolbox.
+  or use the button on the toolbox. <img src="flip-button.png" alt=""/>
 </p>
 <p>
   Using another <a href="http://antwrp.gsfc.nasa.gov/apod/ap021114.html">APOD</a> image I demonstrated all 
