--- a/tutorials/Red_Eye_Removal/index.html
+++ b/tutorials/Red_Eye_Removal/index.html
@@ -40,11 +40,10 @@
 
 <div class="subtitle">Step 3</div>
 <p class="images">
-  <img src="dodgeorburn.png" alt=""/>
   <img src="burnopts-sm.png" alt=""/>
 </p>
 <p>
-   Make certain you have a good brush selected (for this image I used the 5 x 5 fuzzy) Then select the Dodge and Burn Tool. dodge or burn tool 
+   Make certain you have a good brush selected (for this image I used the 5 x 5 fuzzy) Then select the Dodge and Burn Tool. <img src="dodgeorburn.png" alt=""/> 
    Double click on the button to get the Tool Options dialog. My dialog defaults to dodge and midtones, for this project, choose burn and hightlights (as illustrated).
    Touch all of the red in the eyes with the burn tool. I think that I used the burn tool on the midtones just a little bit also. The GIMP doesn't have 
    a magic button to fix red eyes with, but it has the tools. It has been my experience that each image is slightly different and I sort of like the control 
