--- a/tutorials/Perl-Debugged/index.html
+++ b/tutorials/Perl-Debugged/index.html
@@ -109,7 +109,7 @@ exit main;
   If you change a Gimp-Perl script to utilize this, you'll notice gimp halting on startup. This is because gimp is querying the plug-in, 
   and it is halting due to having debugging enabled. Just type 'c' in the window, and then 'q' to let gimp continue loading:
 </p>
-<div class="code">
+<div class="debug">
 Enter h or `h h' for help, or `man perldebug' for more help.
 
 main::(/home/seth/.gimp-1.3/plug-ins/demo:21):
@@ -127,7 +127,7 @@ Debugged program terminated.  Use q to quit or R to restart,
   First, move your script out of your plug-ins directory to somewhere else. Then startup gimp. Start the Perl Server by going to <span class="filter">Xtns -&gt; Perl Server</span>. 
   You'll see something like the following in the XTerm window of gimp:
 </p>
-<div class="code">
+<div class="debug">
 989020828: server version 1.201 started
 989020828: accepting connections on /tmp/gimp-perl-serv-uid-1000/gimp-perl-serv
 </div>
@@ -135,7 +135,7 @@ Debugged program terminated.  Use q to quit or R to restart,
   Now from another XTerm, execute the script (just type its name). This will immediately start debugging the new script. 
   You can set a breakpoint on a line of your choice and execute 'c' to let it execute until that line.
 </p>
-<div class="code">
+<div class="debug">
   DB&lt;1&gt; b 13
   DB&lt;2&gt; c
     13:        $fname = "/home/seth/dumb.jpg";
@@ -182,7 +182,7 @@ exit main;
 <p>
   After invoking the perl server, I run 'Example' from a commandline shell:
 </p>
-<div class="code">
+<div class="debug">
 Default die handler restored.
 
 Loading DB routines from perl5db.pl version 1.07
