Modified ChangeLog. Fixed a typo.
Modified ChangeLog.
Fixed a typo.

--- a/tutorials/Perl-Debugged/index.html
+++ b/tutorials/Perl-Debugged/index.html
@@ -2,7 +2,7 @@
 <title>GIMP - Perl Debugged</title>
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <div id="main">
-<div class="heading">Perl Debuggde</div>
+<div class="heading">Perl Debugged</div>
 
 <div class="subtitle">Intention</div>
 <p>
