Modified ChangeLog. Changed a few things in the tables for the tutorial.
Modified ChangeLog.
Changed a few things in the tables for the tutorial.

--- a/tutorials/Perl-Debugged/index.html
+++ b/tutorials/Perl-Debugged/index.html
@@ -67,8 +67,8 @@ exit main;
   This will give the maximum amount of tracing information, displayed on the console window you start gimp from. 
   You can cut back on what all gets displayed by using an "or'ed" combination of the following other options in place of TRACE_ALL:
 </p>
-<table BGCOLOR="#CCFFCC">
-<tr><td WIDTH=20%>TRACE_NONE</td><td WIDTH=40%>         turn off tracing</td></tr>
+<table bgcolor="#CCFFCC">
+<tr><td width="20%">TRACE_NONE</td><td width="40%">         turn off tracing</td></tr>
 <tr><td>TRACE_CALL</td><td>     trace only Gimp Procedural Database (PDB) calls (including arguments and return values)</td></tr>
 <tr><td>TRACE_TYPE</td><td>      also print the parameter types</td></tr>
 <tr><td>TRACE_NAME</td><td>     print the parameter names</td></tr>
