Modified ChangeLog. Trying to fix the line-wrap problem for IE.
Modified ChangeLog.
Trying to fix the line-wrap problem for IE.

--- a/tutorials/Perl-Debugged/index.html
+++ b/tutorials/Perl-Debugged/index.html
@@ -15,7 +15,7 @@
   <br /><br />
   To illustrate the points in this tutorial, this is a simple script that will change as we progress:
 </p>
-<div class="code">
+<div class="code"><pre>
 #!/usr/bin/perl
 
 use Gimp qw(:auto);
@@ -34,7 +34,7 @@ register "example", "Example", "Dumb example for debugging",
    };
 
 exit main;
-</div>
+</pre></div>
 
 <div class="subtitle">Gimp::set_trace</div>
 <p>
